js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-braceless-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

if (false) {

} else new import('').prop;
